@@ -61,6 +61,7 @@ import jdk.internal.jimage.ImageReader;
 import jdk.internal.jimage.ImageReaderFactory;
 import jdk.internal.misc.JavaNetUriAccess;
 import jdk.internal.misc.SharedSecrets;
+import jdk.internal.util.StaticProperty;
 import jdk.internal.module.ModuleHashes.HashSupplier;
 
 /**
@@ -183,7 +184,7 @@ public final class SystemModuleFinders {
         }
 
         // probe to see if this is an images build
-        String home = System.getProperty("java.home");
+        String home = StaticProperty.javaHome();
         Path modules = Path.of(home, "lib", "modules");
         if (Files.isRegularFile(modules)) {
             if (USE_FAST_PATH) {
@@ -281,8 +282,8 @@ public final class SystemModuleFinders {
 
         SystemModuleFinder(Set<ModuleReference> mrefs,
                            Map<String, ModuleReference> nameToModule) {
-            this.mrefs = Collections.unmodifiableSet(mrefs);
-            this.nameToModule = Collections.unmodifiableMap(nameToModule);
+            this.mrefs = Set.copyOf(mrefs);
+            this.nameToModule = Map.copyOf(nameToModule);
         }
 
         @Override
@@ -352,7 +353,7 @@ public final class SystemModuleFinders {
                 }
             }
         }
-        return (nameToHash != null) ? nameToHash : Collections.emptyMap();
+        return (nameToHash != null) ? nameToHash : Map.of();
     }
 
     /**
