@@ -23,11 +23,12 @@
  * questions.
  */
 
-/*
+/**
  * @test
  * @bug 8157032
  * @key jfr
  * @summary verify that jfr can not be used when JVM is executed only with java.base
+ * @requires vm.hasJFR
  * @library /test/lib
  * @modules java.base/jdk.internal.misc
  * @run driver jdk.jfr.jvm.TestJfrJavaBase
@@ -43,9 +44,8 @@ import jdk.test.lib.process.ProcessTools;
 public class TestJfrJavaBase {
 
     private static void checkOutput(OutputAnalyzer output) {
-        output.shouldContain("jdk.jfr not found.");
+        output.shouldContain("Module jdk.jfr not found.");
         output.shouldContain("Flight Recorder can not be enabled.");
-        output.shouldContain("To use Flight Recorder, you might need to add \"--add-modules jdk.jfr\" to the VM command-line options.");
     }
 
     public static void main(String[] args) throws Exception {
